--- a/example/sample.yaml
+++ b/example/sample.yaml
@@ -1,20 +1,21 @@
-apiVersion: "v1"
-kind: Pod
+apiVersion: batch/v1
+kind: Job
 metadata:
   name: kmeasure
-  labels:
-    name: kmeasure    
 spec:
-  containers:
-    - name: calcbackend
-      image: danielmeixner/kmeasure:latest      
-      env: 
-        - name: "MEASURE_NAMESPACE"
-          value: "default"
-        - name: "MEASURE_PODNAME"
-          value: "anycode-7dff646747-vz5xj"
-        - name: "MEASURE_INTERVAL"
-          value: "5000"
-        - name: "MEASURE_TIME"
-          value: "60"
+  template: 
+    spec:
+      restartPolicy: "Never"
+      containers:
+        - name: calcbackend
+          image: danielmeixner/kmeasure:latest      
+          env: 
+            - name: "MEASURE_NAMESPACE"
+              value: "default"
+            - name: "MEASURE_PODNAME"
+              value: "anycode-7dff646747-vz5xj"
+            - name: "MEASURE_INTERVAL"
+              value: "5000"
+            - name: "MEASURE_TIME"
+              value: "60"
             
